<resources>
    <string name="app_name">SerializableParcelable</string>
    <string name="bookAddress">Книга адресов</string>
    <string name="info">Информация</string>
    <string name="avatar">Avatar</string>
    <string name="name">Имя</string>
    <string name="lastName">Фамилия</string>
    <string name="address">Адрес</string>
    <string name="phone">Телефон</string>
    <string name="save">Сохранить</string>
</resources>